[tool.poetry]
name = "mouse-mover"
version = "0.1.0"
description = ""
authors = ["Beaver <8586904+PragmaticBeaver@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ruff = "^0.4.2"
pyautogui = "^0.9.54"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
